--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
 
-    <script src="js/form.js"></script>
-    <script src="js/user.js"></script>
-
+  
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-database.js"></script>
@@ -31,6 +29,9 @@
   firebase.initializeApp(firebaseConfig);
   
 </script>
+  <script src="js/form.js"></script>
+    <script src="js/user.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
@@ -43,7 +44,7 @@
     <p>
         <button id="saveButton">Save Drawing</button>
         <button id="clearButton">Clear Drawing</button>
-      
+        <button id="showButton">Show Drawing</button>
        
     </p>
 </body>
